--- a/Notes/lect-4/3. loops.md
+++ b/Notes/lect-4/3. loops.md
@@ -1,7 +1,7 @@
 # Loops:
 
 1) for Loop Basics
-Used to iterate (loop) over a sequence (list, string, tuple, range, etc.).
+Used to iterate (loop) over a sequence (list, +, tuple, range, etc.).
 
 ```py
 fruits = ["apple", "banana", "cherry"]
